Add MongoDB Atlas connection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.data.mongodb.uri=mongodb://localhost:27017/recipeDB
-server.port=8080
+
+mongodb+srv://admin:<admin>@oop1.ike4rox.mongodb.net/?retryWrites=true&w=majority&appName=oop1
