Fix: Use MongoDB Atlas instead of localhost

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,1 @@
-
-mongodb+srv://admin:<admin>@oop1.ike4rox.mongodb.net/?retryWrites=true&w=majority&appName=oop1
+spring.data.mongodb.uri=mongodb+srv://admin:admin@oop1.abcde.mongodb.net/recipe-db?retryWrites=true&w=majority
